# rust_bindings_python_polars

./: .gitignore  Cargo.toml  README.md  output.csv  pcsv.py  pyproject.toml  requirements.txt
src/: lib.rs
