[package]
name = "rust_bindings_python"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "read_csvs"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module"] }
#features = ["auto-initialize"]

polars = { version = "0.28.0", features = ["lazy", "csv-file"] }
polars-io = "0.28.0"
polars-lazy = "0.28.0"

csv = "1.2.1"